从beluga-mall项目迁移代码

--- a/white-whale-security/src/main/resources/application.properties
+++ b/white-whale-security/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+server.servlet.context-path=/beluga-mall-security
+server.port=8081
 
+#spring.profiles.active=dev
+
+#logging.level.org.springframework=DEBUG
