将含有名称为beluga-mall的xml、dockerfile文件修改为white-whale

--- a/white-whale-security/pom.xml
+++ b/white-whale-security/pom.xml
@@ -76,7 +76,7 @@
         </dependencies>
     </dependencyManagement>
     <build>
-        <finalName>beluga-mall-security</finalName>
+        <finalName>white-whale-security</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
